# simple-webrtc

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml  README.md
example/src/: lib.rs
src/: blink.rs  lib.rs  scratch.rs  scratch2.rs  scratch3.rs  scratch4.rs  testing.rs
src/internal/: background_thread.rs  data_types.rs  events.rs  media.rs  mime_type.rs  mod.rs  simple_webrtc.rs
src/media/: mod.rs  opus_sink.rs  opus_source.rs
