[package]
name = "simple-webrtc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
bytes = "1"
cpal = "0.14.2"
log = "0.4.17"
opus = "0.3.0"
uuid = "1.2.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.22.0", features = ["full"] }
webrtc = "0.6.0"

hyper = { version = "0.14", features = ["full"], optional = true }
#hyper-tls = { version = "0.5.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }

[features]
test-server = ["dep:hyper", "dep:lazy_static"]