[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66" } # this isn't added to the library yet: features = ["file-lines"]
chrono = "0.4.23"
clap = { version = "4.0.23", features = ['derive'] }
env_logger = "0.9.3"
log = "0.4.17"
simple-webrtc = { path="../", features = ["test-server"]  }
tokio = { version = "1.22.0", features = ["full"] }
